--- a/style.css
+++ b/style.css
@@ -601,6 +601,7 @@
             height: 200px;
             background-color: #f5f5f5;
             position: relative;
+            background-size: cover;
         }
         
         .product-badge {
